--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -1,85 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto"
-        />
+        <meta name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=auto" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
 
-        <link
-            href="assets/splashscreens/iphone5_splash.png"
+        <link href="assets/splashscreens/iphone5_splash.png"
             media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphone6_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphone6_splash.png"
             media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphoneplus_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphoneplus_splash.png"
             media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphonex_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonex_splash.png"
             media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphonexr_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonexr_splash.png"
             media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphonexsmax_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphonexsmax_splash.png"
             media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/iphone12_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/iphone12_splash.png"
             media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipad_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipad_splash.png"
             media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipadpro1_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro1_splash.png"
             media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipadpro3_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro3_splash.png"
             media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
-        <link
-            href="assets/splashscreens/ipadpro2_splash.png"
+            rel="apple-touch-startup-image" />
+        <link href="assets/splashscreens/ipadpro2_splash.png"
             media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
-            rel="apple-touch-startup-image"
-        />
+            rel="apple-touch-startup-image" />
 
-        <link
-            rel="apple-touch-icon"
-            type="image/png"
-            sizes="any"
-            href="assets/apple-touch-icon.png"
-        />
-        <link
-            rel="apple-touch-icon-precomposed"
-            type="image/png"
-            sizes="any"
-            href="assets/apple-touch-icon-precomposed.png"
-        />
+        <link rel="apple-touch-icon" type="image/png" sizes="any" href="assets/apple-touch-icon.png" />
+        <link rel="apple-touch-icon-precomposed" type="image/png" sizes="any"
+            href="assets/apple-touch-icon-precomposed.png" />
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link rel="stylesheet" href="dev.css" />
 
@@ -134,7 +102,7 @@
                 loop: false,
                 snap: 'center',
                 axis: undefined,
-                animation: animations.shade,
+                animation: animations.flip,
                 easing: easings.lenear,
             };
             window.position = 0;
@@ -151,7 +119,11 @@
                 .then(({ version }) => {
                     title.innerText = `Slidy ${version} - NativeJS`;
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
-                    getPhotos(node, utils.randomQ(1, 99), options.length).then(setEvents);
+                    getPhotos(node, utils.randomQ(1, 99), options.length).then(() => {
+                        slidy = slidyCore(node, options);
+                        slidyT = slidyCore(thumbs, { index: options.index });
+                        setTimeout(setEvents);
+                    });
                 });
         </script>
     </head>
@@ -187,128 +159,55 @@
 
             <form>
                 <fieldset>
-                    <label title="axis"
-                        >axis
-                        <select
-                            id="axis"
-                            name="axis"
-                            onchange="slidy.update({ axis: this.value })"
-                        ></select>
+                    <label title="axis">axis
+                        <select id="axis" name="axis" onchange="slidy.update({ axis: this.value })"></select>
                     </label>
-                    <label title="snap"
-                        >snap
-                        <select
-                            id="snap"
-                            name="snap"
-                            onchange="slidy.update({ snap: this.value })"
-                        ></select>
+                    <label title="snap">snap
+                        <select id="snap" name="snap" onchange="slidy.update({ snap: this.value })"></select>
                     </label>
-                    <label title="animation"
-                        >animation
-                        <select
-                            id="animation"
-                            name="animation"
-                            onchange="slidy.update({ animation: animations[this.value] })"
-                        ></select>
+                    <label title="animation">animation
+                        <select id="animation" name="animation"
+                            onchange="slidy.update({ animation: animations[this.value] })"></select>
                     </label>
-                    <label title="easing"
-                        >easing
-                        <select
-                            id="easing"
-                            name="easing"
-                            onchange="slidy.update({ easing: easings[this.value] })"
-                        ></select>
+                    <label title="easing">easing
+                        <select id="easing" name="easing"
+                            onchange="slidy.update({ easing: easings[this.value] })"></select>
                     </label>
                 </fieldset>
             </form>
 
             <form>
                 <fieldset>
-                    <label title="clamp"
-                        >clamp
-                        <input
-                            id="clamp"
-                            onchange="slidy.update({ clamp: +this.value })"
-                            name="clamp"
-                            type="number"
-                            size="1"
-                            step="1"
-                            min="0"
-                            max="3"
-                        />
+                    <label title="clamp">clamp
+                        <input id="clamp" onchange="slidy.update({ clamp: +this.value })" name="clamp" type="number"
+                            size="1" step="1" min="0" max="3" />
                     </label>
-                    <label title="sensity"
-                        >sensity
-                        <input
-                            id="sensity"
-                            onchange="slidy.update({ sensity: +this.value })"
-                            name="sensity"
-                            type="number"
-                            size="2"
-                            step="1"
-                            min="0"
-                            max="100"
-                        />
+                    <label title="sensity">sensity
+                        <input id="sensity" onchange="slidy.update({ sensity: +this.value })" name="sensity"
+                            type="number" size="2" step="1" min="0" max="100" />
                     </label>
-                    <label title="indent"
-                        >indent
-                        <input
-                            id="indent"
-                            onchange="slidy.update({ indent: +this.value })"
-                            name="indent"
-                            type="number"
-                            size="1"
-                            step="0.1"
-                            min="-2"
-                            max="2"
-                        />
+                    <label title="indent">indent
+                        <input id="indent" onchange="slidy.update({ indent: +this.value })" name="indent" type="number"
+                            size="1" step="0.1" min="-2" max="2" />
                     </label>
-                    <label title="duration"
-                        >duration
-                        <input
-                            id="duration"
-                            onchange="slidy.update({ duration: +this.value })"
-                            name="duration"
-                            type="number"
-                            size="2"
-                            step="1"
-                            min="100"
-                            max="1000"
-                        />
+                    <label title="duration">duration
+                        <input id="duration" onchange="slidy.update({ duration: +this.value })" name="duration"
+                            type="number" size="2" step="1" min="100" max="1000" />
                     </label>
-                    <label title="gravity"
-                        >gravity
-                        <input
-                            id="gravity"
-                            onchange="slidy.update({ gravity: +this.value })"
-                            name="gravity"
-                            type="number"
-                            size="1"
-                            step="0.1"
-                            min="0.1"
-                            max="2"
-                        />
+                    <label title="gravity">gravity
+                        <input id="gravity" onchange="slidy.update({ gravity: +this.value })" name="gravity"
+                            type="number" size="1" step="0.1" min="0.1" max="2" />
                     </label>
                 </fieldset>
             </form>
 
             <form>
                 <fieldset>
-                    <label title="length"
-                        >length
-                        <input
-                            id="length"
-                            onchange="utils.changeLength(this)"
-                            name="length"
-                            type="number"
-                            size="1"
-                            step="1"
-                            min="1"
-                            max="50"
-                        />
+                    <label title="length">length
+                        <input id="length" onchange="utils.changeLength(this)" name="length" type="number" size="1"
+                            step="1" min="1" max="50" />
                     </label>
-                    <label title="flow"
-                        >flow
+                    <label title="flow">flow
                         <select id="flow" name="flow" onchange="utils.setFlow(this.value)">
                             <option>row</option>
                             <option>row-reverse</option>
@@ -316,16 +215,13 @@
                             <option>column-reverse</option>
                         </select>
                     </label>
-                    <label title="width"
-                        >width
+                    <label title="width">width
                         <input onchange="utils.setVar(this)" name="width" size="4" />
                     </label>
-                    <label title="height"
-                        >height
+                    <label title="height">height
                         <input onchange="utils.setVar(this)" name="height" size="5" />
                     </label>
-                    <label title="gap"
-                        >gap
+                    <label title="gap">gap
                         <input onchange="utils.setVar(this)" name="gap" size="4" />
                     </label>
                 </fieldset>
@@ -371,33 +267,23 @@
             <h2>Packages</h2>
             <ul>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/core"
-                        >@slidy/core</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/core">@slidy/core</a>
                     - Core sliding script
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/media"
-                        >@slidy/media</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/media">@slidy/media</a>
                     - Observable media
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/easing"
-                        >@slidy/easing</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/easing">@slidy/easing</a>
                     - Easing functions
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/animation"
-                        >@slidy/animation</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/animation">@slidy/animation</a>
                     - Animation functions
                 </li>
                 <li>
-                    <a href="https://github.com/Valexr/slidy/tree/master/packages/svelte"
-                        >@slidy/svelte</a
-                    >
+                    <a href="https://github.com/Valexr/slidy/tree/master/packages/svelte">@slidy/svelte</a>
                     - SvelteJS template
                 </li>
             </ul>
@@ -440,4 +326,5 @@
         </article>
         <br />
     </body>
+
 </html>
