@slidy/core - cleanup dev

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -137,7 +137,7 @@
 
         <main id="main" style="--gap: 2rem; --flow: row; --width: auto; --height: 375px">
             <ul id="node" tabindex="0"></ul>
-            <nav id="thumbs"></nav>
+            <nav id="thumbs" style="--gap: 1rem; --flow: row; --width: 68px; --height: 100px;"></nav>
         </main>
 
         <footer>
