--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -102,7 +102,7 @@
                 loop: false,
                 snap: 'center',
                 axis: undefined,
-                animation: animations.flip,
+                // animation: animations.flip,
                 easing: easings.lenear,
             };
             window.position = 0;
@@ -119,7 +119,7 @@
                 .then(({ version }) => {
                     title.innerText = `Slidy ${version} - NativeJS`;
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
-                    getPhotos(node, utils.randomQ(1, 99), options.length).then(() => {
+                    getPhotos(node, options.length, 32).then(() => {
                         slidy = slidyCore(node, options);
                         slidyT = slidyCore(thumbs, { index: options.index, snap: 'center' });
                         setTimeout(setEvents);
@@ -143,7 +143,7 @@
         <footer>
             <nav>
                 <button id="prev" onclick="slidy.to(options.index - 1, -100)">←</button>
-                <button id="reload" onclick="getPhotos(node, utils.randomQ(1, 99), options.length)">
+                <button id="reload" onclick="getPhotos(node, options.length)">
                     <i class="icon icon-refresh"></i>
                 </button>
                 <button id="next" onclick="slidy.update({position: 1000})">→</button>
