@slidy/core - improve dev

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -102,7 +102,7 @@
                 loop: false,
                 snap: 'center',
                 axis: undefined,
-                // animation: animations.flip,
+                animation: animations.flip,
                 easing: easings.lenear,
             };
             window.position = 0;
