@slidy/core - improve edges & clamped

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -101,7 +101,7 @@
                 duration: 375,
                 loop: false,
                 snap: 'center',
-                axis: undefined,
+                axis: 'x',
                 animation: animations.flip,
                 easing: easings.lenear,
             };
@@ -230,19 +230,19 @@
 
         <!-- <section id="s1">
             <section id="s2">
-                <img src="https://picsum.photos/id/13/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/14/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/15/1280/800.jpg" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
             </section>
             <section id="s3">
-                <img src="https://picsum.photos/id/16/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/17/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/18/1280/800.jpg" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
             </section>
             <section id="s4">
-                <img src="https://picsum.photos/id/19/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/20/1280/800.jpg" alt="10" />
-                <img src="https://picsum.photos/id/21/1280/800.jpg" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
+                <img src="https://source.unsplash.com/random/1280x800" alt="10" />
             </section>
         </section> -->
 
