@slidy/core - fix clamped wheel

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -101,7 +101,7 @@
                 duration: 375,
                 loop: false,
                 snap: 'center',
-                axis: 'x',
+                axis: 'y',
                 animation: animations.flip,
                 easing: easings.lenear,
             };
