--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -95,16 +95,16 @@
                 index: 4,
                 clamp: 0,
                 indent: 1,
-                length: 9,
                 sensity: 2.5,
                 gravity: 1.2,
                 duration: 375,
                 loop: false,
                 snap: 'center',
-                axis: 'y',
+                axis: 'x',
                 animation: animations.flip,
                 easing: easings.lenear,
             };
+            window.length = 9;
             window.position = 0;
             window.slidy = null;
             window.slidyT = null;
@@ -119,7 +119,7 @@
                 .then(({ version }) => {
                     title.innerText = `Slidy ${version} - NativeJS`;
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
-                    getSlides(node, options.length).then(() => {
+                    getSlides(length).then(() => {
                         slidy = slidyCore(node, options);
                         slidyT = slidyCore(thumbs, { index: options.index, snap: 'center' });
                         setTimeout(setEvents);
@@ -142,14 +142,15 @@
 
         <footer>
             <nav>
-                <button id="prev" onclick="slidy.to(options.index - 1, -100)">←</button>
-                <button id="reload" onclick="getSlides(node, options.length)">
+                <!-- <button id="prev" onclick="slidy.to(options.index - 1, -100)">←</button> -->
+                <input name="themes" placeholder="themes, of, photos" onchange="getSlides(length, this.value)" />
+                <!-- <button id="reload" onclick="getSlides(options.length, 'girl')">
                     <i class="icon icon-refresh"></i>
                 </button>
-                <button id="next" onclick="slidy.update({position: 1000})">→</button>
+                <button id="next" onclick="slidy.update({position: 1000})">→</button> -->
             </nav>
 
-            <nav id="dots"></nav>
+            <!-- <nav id="dots"></nav> -->
 
             <nav id="buttons">
                 <button id="loop" onclick="slidy.update({ loop: options.loop = !options.loop })">
