--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -104,7 +104,8 @@
                 animation: animations.flip,
                 easing: easings.lenear,
             };
-            window.length = 9;
+            window.limit = 9;
+            window.themes = '';
             window.position = 0;
             window.slidy = null;
             window.slidyT = null;
@@ -119,7 +120,7 @@
                 .then(({ version }) => {
                     title.innerText = `Slidy ${version} - NativeJS`;
                     header.innerHTML = `Slidy <span>${version}</span><sub>nativeJS</sub><sub id="stats" />`;
-                    getSlides(length).then(() => {
+                    getSlides(limit).then(() => {
                         slidy = slidyCore(node, options);
                         slidyT = slidyCore(thumbs, { index: options.index, snap: 'center' });
                         setTimeout(setEvents);
@@ -143,7 +144,7 @@
         <footer>
             <nav>
                 <button id="prev" onclick="slidy.to(options.index - 1, -100)">←</button>
-                <button id="reload" onclick="getSlides(length)">
+                <button id="reload" onclick="getSlides(limit)">
                     <i class="icon icon-refresh"></i>
                 </button>
                 <button id="next" onclick="slidy.to(options.index + 1, +100)">→</button>
@@ -223,9 +224,13 @@
                     <label title="gap">gap
                         <input onchange="utils.setVar(this)" name="gap" size="4" />
                     </label>
+                </fieldset>
+            </form>
+            <form onsubmit="event.preventDefault()">
+                <fieldset>
                     <label title="themes">themes
-                        <input name="themes" placeholder="themes, of, photos"
-                            onchange="getSlides(length, this.value)" />
+                        <input type="text" name="themes" placeholder="themes, of, photos"
+                            onchange="getSlides(limit, value)" />
                     </label>
                 </fieldset>
             </form>
