@slidy/core - cleanup dev

--- a/packages/core/public/index.html
+++ b/packages/core/public/index.html
@@ -155,11 +155,11 @@
                     <i class="icon icon-refresh"></i>
                 </button>
                 <button id="next" onclick="slidy.to(options.index + 1, +100)">→</button>
-                <button id="-" onclick="node.removeChild(node.lastChild);">-</button>
-                <button id="+" onclick="node.appendChild(createElement('li'))">+</button>
+                <!-- <button id="-" onclick="node.removeChild(node.lastChild);">-</button> -->
+                <!-- <button id="+" onclick="node.appendChild(createElement('li'))">+</button> -->
             </nav>
 
-            <nav id="dots"></nav>
+            <!-- <nav id="dots"></nav> -->
 
             <form>
                 <fieldset>
